画像を扱えるようにした。 Undoの実装。

--- a/MockDesigner/nbproject/project.properties
+++ b/MockDesigner/nbproject/project.properties
@@ -26,7 +26,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${file.reference.jdom.jar}
+    ${file.reference.jdom.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -35,7 +36,6 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
 javadoc.additionalparam=
 javadoc.author=false
