--- a/MockDesigner/src/mockdesigner/resources/MockDesignerView.properties
+++ b/MockDesigner/src/mockdesigner/resources/MockDesignerView.properties
@@ -69,3 +69,8 @@ saveAsFile.Action.text=
 newMenuItem.text=\u65B0\u898F
 newAction.Action.text=
 newAction.Action.shortDescription=
+imageAction.Action.text=Image
+imageAction.Action.shortDescription=
+imageButton.text=Image
+selectImage.Action.shortDescription=\u753B\u50CF
+selectImage.Action.text=Image
