バグを修正

--- a/MockDesigner/src/mockdesigner/resources/MockDesignerAboutBox.properties
+++ b/MockDesigner/src/mockdesigner/resources/MockDesignerAboutBox.properties
@@ -7,3 +7,4 @@ versionLabel.text=Version\:
 #NOI18N
 imageLabel.icon=about.png
 closeButton.text=\u9589\u3058\u308B
+jLabel1.text=Copyright 2010 Manabu Shibata
